<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.4.5</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>com.mirafintech.prototype</groupId>
  <artifactId>engine</artifactId>
  <version>1.0</version>
  <name>engine</name>
  <description>Mirafintech Prototype Engine</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>16</java.version>
    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
    <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-hateoas</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>

    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
<!--      <scope>runtime</scope>-->
    </dependency>

<!--    <dependency>-->
<!--      <groupId>javax.persistence</groupId>-->
<!--      <artifactId>javax.persistence-api</artifactId>-->
<!--      <version>2.2</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>junit</groupId>-->
<!--      <artifactId>junit</artifactId>-->
<!--      <version>4.11</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

    <!--
    /*****************************************
     * JSR-380 javax.validation dependencies *
     ****************************************/
    -->
<!--    <dependency>-->
<!--      <groupId>org.hibernate.validator</groupId>-->
<!--      <artifactId>hibernate-validator</artifactId>-->
<!--      <version>6.1.4.Final</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.glassfish</groupId>-->
<!--      <artifactId>javax.el</artifactId>-->
<!--      <version>3.0.0</version>-->
<!--      <scope>provided</scope>-->
<!--    </dependency>-->

  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer-plugin.version}</version>
        <executions>
          <execution>
            <id>coverage.check</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <phase>test</phase>
            <configuration>
              <rules>
                <requireFilesDontExist>
                  <files>
                    <file>target/coverage.check.failed</file>
                  </files>
                </requireFilesDontExist>
              </rules>
            </configuration>
          </execution>
          <execution>
            <id>enforce-ban-duplicate-classes</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <banDuplicateClasses>
                  <findAllDuplicates>true</findAllDuplicates>
                  <ignoreWhenIdentical>true</ignoreWhenIdentical>
                  <ignoreClasses>
                    <ignoreClass>org.junit.runner.*</ignoreClass>
                  </ignoreClasses>
                </banDuplicateClasses>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>extra-enforcer-rules</artifactId>
            <version>1.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <!-- enable preview features for 'test' goal -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
